@@ -6,7 +6,7 @@ use strict;
 BEGIN
   {
   $| = 1; 
-  plan tests => 42;
+  plan tests => 49;
   chdir 't' if -d 't';
   unshift @INC, '../blib/lib';
   unshift @INC, '../blib/arch';
@@ -21,6 +21,10 @@ can_ok('Devel::Size::Report', qw/
   S_GLOB
   S_UNKNOWN
   S_KEY
+  S_LVALUE
+  S_CODE
+  S_REGEXP
+  S_REF
   entries_per_element
   /);
 
@@ -34,6 +38,10 @@ Devel::Size::Report->import(qw/
   S_GLOB
   S_UNKNOWN
   S_KEY
+  S_LVALUE
+  S_CODE
+  S_REGEXP
+  S_REF
   /);
 
 use Devel::Size qw/size total_size/;
@@ -167,7 +175,6 @@ my $u = "A string";
 my $C = report_size( $u, { head => '' } );
 my $D = report_size( $y, { head => '' } );
 
-# XXX Does not work!?
 TODO: {
   local $TODO = "Looking at \$z and/or \$y changes the size of \$x and newly created scalars!";
 
@@ -179,6 +186,70 @@ TODO: {
 #print report_size( $y, { head => '' } ), "\n";
 #print report_size( $z, { head => '' } ), "\n";
 
+my $code = sub { my $x = 129; $x = 12 if $x < 130; };
 
+#############################################################################
+# SCALAR references
 
+$A = report_size( \"1234", { head => '' } );
+
+is ($A =~ /Scalar reference/, 1, 'Scalar ref');
+
+#############################################################################
+# CODE 
+
+# see if this does something (XXX TODO: Devel::Size spills some error)
+my $CODE = report_size( $code, { head => '' } );
+
+is ( $CODE =~ /Code /, 1, 'Contains code');
+
+#############################################################################
+# test for cycles and circular references:
+
+my $a = { a => 1 }; $a->{b} = $a; 
+
+# Output like:
+#  Hash 170 bytes (overhead: 138 bytes, 81.18%)
+#    'a' => Scalar 16 bytes
+#    'b' => Circular reference 16 bytes
+#Total: 170 bytes
+
+my $CYCLE = report_size( $a, { head => '' } );
+
+is ($CYCLE =~ /'b' => Circular reference/, 1, 'Contains a cycle');
+
+$a = { a => 1, b => [ 1, 2, { u => 'z' } ] };
+$a->{b}->[3] = $a->{b}; 
+$a->{b}->[2]->{foo} = $a->{b}; 
+
+$CYCLE = report_size( $a, { head => '' } );
+
+is ($CYCLE =~ /'foo' => Circular reference/, 1, 'Contains a cycle');
+$a = 0; $CYCLE =~ s/Circular reference/$a++/eg;
+is ($a, 2, 'Contains two cycles');
+
+#############################################################################
+# REGEXP
+
+$A = report_size( qr/^(foo|bar)$/, { head => '' } );
+
+is ($A =~ /Regexp/, 1, 'Contains a regexp');
+
+#############################################################################
+# LVALUE
+
+# XXX TODO: I have no idea how to create one
+
+#sub lefty : lvalue {
+#  my $arg = 9;
+#  };
+#
+#$A = report_size( \&lefty(1), { head => '' } );
+
+#############################################################################
+# formatting
+
+$A = report_size( qr/^(foo|bar)$/, { head => '', bytes => '' } );
+
+is ( (scalar $A =~ /bytes/i) || 0, 0, 'No bytes text');
 
